--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         }
         .container{
             display: flex;
-            justify-content: baseline;
+            flex-direction: row;
+            justify-content: flex-end;
             align-items: center;
         }
         .footer-text{
@@ -34,7 +35,9 @@
     }
     @media (max-width: 599px) {
     .animated-div {
-        border-radius: 50%;
+
+
+        
         animation: pulse 3s infinite ease-in-out, rotate 1s infinite linear;
     }
     @keyframes rotate{
@@ -43,7 +46,7 @@
     }
 
     @keyframes pulse {
-        0%, 100% {border-radius: 50%; }
+        0%, 100% {border-radius: 50%;}
         50% {border-radius: 0%;}
     }
 
@@ -78,7 +81,7 @@
         width: 150px;
         height: 100px;
         animation: move 4s infinite alternate;
-        background:  repeating-linear-gradient(45deg in oklab, blue, green 100px);
+        background:  radial-gradient( blue, green 100px);
     }
 
     body{
@@ -86,9 +89,11 @@
     }
 
     @keyframes move {
-        0% { transform: scale(1); }
-        100% { transform: scale (2); }
+        0% { transform: scale(1) translateY(50px); border-radius: 10% 40%; }
+        50% { transform: scale(2) translateX(-30px); border-radius: 2% 50% / 10% 40%;}
+        100% { transform: scale(3) translateX(30px); border-radius: 40% 10%;}
     }
+
 }
 @media (min-width: 1000px) and (max-width: 1199px) {
     .animated-div {
