--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         .container{
             display: flex;
             flex-direction: row;
-            justify-content: flex-end;
+            justify-content: first baseline;
             align-items: center;
         }
         .footer-text{
@@ -90,7 +90,7 @@
 
     @keyframes move {
         0% { transform: scale(1) translateY(50px); border-radius: 10% 40%; }
-        50% { transform: scale(2) translateX(-30px); border-radius: 2% 50% / 10% 40%;}
+        50% { transform: scale(2) translateX(-30px); border-radius: 25% 50% / 10% 40%;}
         100% { transform: scale(3) translateX(30px); border-radius: 40% 10%;}
     }
 
